asg-masters.tf
resource "aws_instance" "k8s_master" {
  ami           = data.aws_ami.debian.id
  instance_type = var.computing.workers.instance_type
  key_name      = var.computing.key_name
  subnet_id     = aws_subnet.public[0].id

  associate_public_ip_address = true
  security_groups             = [aws_security_group.k8s_master_sg.id]

  user_data = base64encode(templatefile("${path.module}/k8s_master_user_data.sh", {
    kubernetes_version         = var.versions.kubernetes_version
    kubernetes_install_version = var.versions.kubernetes_install_version
    containerd_version         = var.versions.containerd_version
    cluster_name               = var.name
    api_dns                    = "${var.dns.controlplane_subdomain}.${var.dns.domain_name}"
    pod_cidr                   = "192.168.0.0/16"
    s3_bucket_name             = aws_s3_bucket.k8s_config.id
  }))

  tags = {
    Name                                = "${var.name}-master-node"
    "kubernetes.io/cluster/${var.name}" = "owned"
  }

  iam_instance_profile = aws_iam_instance_profile.k8s_node_profile.name
}
